--- a/client/src/pages/Photo/components/ProfileCard.css
+++ b/client/src/pages/Photo/components/ProfileCard.css
@@ -4,6 +4,7 @@
   width: 154px;
   margin: 15px 20px;
   color: white;
+  cursor: pointer;
 }
 
 .component .profile-card-name {
