--- a/client/src/pages/UploadImages/UploadImages.css
+++ b/client/src/pages/UploadImages/UploadImages.css
@@ -66,3 +66,11 @@
   color: black;
   transition: all 0.3s ease;
 }
+
+.upload-photos p.error {
+  color: red;
+}
+
+.upload-photos p.success {
+  color: lime;
+}
